<resources>
    <string name="app_name">Kim_J-Project5</string>
    <string name="enter_location">Enter Location</string>
    <string name="current_location">Current Location</string>
    <string name="check_weather">Check Weather</string>
    <string name="add_locations">Add Locations</string>
    <string name="previous_searches">Load Previous Searches</string>
    <string name="location">Location</string>
    <string name="temperature">temperature</string>
    <string name="feels_like">feels like</string>
    <string name="lowest_temp">lowest temp</string>
    <string name="highest_temp">highest temp</string>
    <string name="humidity">humidity</string>
    <string name="get_a_5_day_forecast">Get a 5 Day Forecast</string>
    <string name="button">Button</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="get_notifications">Get Notifications</string>
    <string name="wind_speed">wind speed</string>
    <string name="add_location_notifications">Add Location Notifications</string>
    <string name="condition">condition</string>
    <string name="pop">pop</string>
    <string name="date">date</string>
    <string name="record_video">Record Video</string>
    <string name="share">Share</string>
    <string name="share_via_email">Share via Email</string>
    <string name="send_forecast_as_email">Send Forecast as Email</string>
</resources>